0028853: TDF_AttributeIterator should give handles instead of pointers

Make "Value" method of the iterator return Handle (instead of pointer) to unify public interfaces.